tests/codegen/pass/014-sqrt.hyg
assert(sqrt(4.0f) = 2.0f)