tests/codegen/fail/008-largeeq.hyg
assert( 2.0f >= 4.4f);
assert( 0 >= 3)